# cpp_experiments

./: .gitignore  README.md
bind2nd/: CMakeLists.txt  README.md
bind2nd/src/: bind2nd.h  main.cpp
bookmark/: CMakeLists.txt  README.md
bookmark/src/: expected.h  filter.h  join.h  main.cpp  mtry.h  service.cpp  service.h  session.h  sink.h  transform.h  values.h
curried/: CMakeLists.txt  README.md
curried/src/: curried.h  main.cpp
dsl/: CMakeLists.txt  README.md
dsl/src/: dsl.h  main.cpp  person.h  vehicle.h
lazy_eval_fibonacci/: README.md
lazy_eval_fibonacci/src/: benchmark.cpp  main.cpp
lazy_eval_fibonacci/src/lib/: CMakeLists.txt  cached_fibonacci.cpp  cached_fibonacci.h  efficient_cached_fibonacci.cpp  efficient_cached_fibonacci.h  plain_fibonacci.cpp  plain_fibonacci.h
lazy_eval_no_args/: README.md
lazy_eval_no_args/src/: benchmark.cpp  main.cpp
lazy_eval_no_args/src/lib/: CMakeLists.txt  lazy_eval.h  sample_function.cpp  sample_function.h
lazy_eval_recursive/: CMakeLists.txt  README.md
lazy_eval_recursive/src/: main.cpp  make_memoized_recursive.h
lazy_eval_with_args/: README.md
lazy_eval_with_args/src/: benchmark.cpp  main.cpp  make_memoized.h
lazy_string_concatenation/: CMakeLists.txt  README.md
lazy_string_concatenation/src/: lazy_string_concatenation.h  main.cpp
text_words_frequency/src/: main.cpp
type_utils/: CMakeLists.txt  README.md
type_utils/src/: main.cpp  type_utils.h
words_frequency/: README.md
words_frequency_with_ranges/: CMakeLists.txt  README.md
words_frequency_with_ranges/src/: main.cpp
(+3 files in other folders)
